Move level.h/cpp into Source folder

--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -24,8 +24,8 @@
     <ClCompile Include="Source\Resources.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="level.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Source\level.cpp">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -35,7 +35,10 @@
     <ClInclude Include="Source\Resources.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="level.h">
+    <ClInclude Include="Source\common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\level.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
