--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -164,14 +164,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="level.cpp" />
     <ClCompile Include="Source\game.cpp" />
+    <ClCompile Include="Source\level.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Resources.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="level.h" />
+    <ClInclude Include="Source\common.h" />
     <ClInclude Include="Source\game.h" />
+    <ClInclude Include="Source\level.h" />
     <ClInclude Include="Source\Resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
