--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -167,13 +167,13 @@
     <ClCompile Include="Source\game.cpp" />
     <ClCompile Include="Source\level.cpp" />
     <ClCompile Include="Source\main.cpp" />
-    <ClCompile Include="Source\Resources.cpp" />
+    <ClCompile Include="Source\resources.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\common.h" />
     <ClInclude Include="Source\game.h" />
     <ClInclude Include="Source\level.h" />
-    <ClInclude Include="Source\Resources.h" />
+    <ClInclude Include="Source\resources.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
