--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{145d8a9a-09e5-47f5-b2ec-58a8985ca5a8}</ProjectGuid>
     <RootNamespace>raylibtemplate</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>alien_invaders_refactor</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
