--- a/raylib_template.vcxproj
+++ b/raylib_template.vcxproj
@@ -165,16 +165,25 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\app.cpp" />
+    <ClCompile Include="Source\end_screen.cpp" />
     <ClCompile Include="Source\game.cpp" />
+    <ClCompile Include="Source\leaderboard.cpp" />
     <ClCompile Include="Source\level.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\main_menu.cpp" />
     <ClCompile Include="Source\resources.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\app.h" />
     <ClInclude Include="Source\common.h" />
+    <ClInclude Include="Source\end_screen.h" />
     <ClInclude Include="Source\game.h" />
+    <ClInclude Include="Source\leaderboard.h" />
     <ClInclude Include="Source\level.h" />
+    <ClInclude Include="Source\main_menu.h" />
     <ClInclude Include="Source\resources.h" />
+    <ClInclude Include="Source\scene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
