--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Source\leaderboard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\highscore_scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\game.h">
@@ -66,6 +69,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\leaderboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\highscore_scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
