--- a/raylib_template.vcxproj.filters
+++ b/raylib_template.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Source\entities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\something_went_wrong_scene.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\game.h">
@@ -72,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\entities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\something_went_wrong_scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
